syntax = "proto3";

package user;

option go_package = "github.com/ehsundar/insta/pkg/user";

import "google/protobuf/timestamp.proto";

message User {
    int64 ident = 1;
    string username = 2;
    google.protobuf.Timestamp created_at = 3;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    int64 ident = 1;
}

message GetUserByIdentRequest {
    int64 ident = 1;
}

message GetUserByIdentResponse {
    User user = 1;
}

service UserStorage {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserByIdent(GetUserByIdentRequest) returns (GetUserByIdentResponse);
}
